--- a/index.html
+++ b/index.html
@@ -3,15 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Git test</title>
 </head>
 <body>
-    
-<p onclick="">Hello world!</p>
-<!-- 
-<script>
-    alert (1);
-</script> -->
+
+    <h1>Hello world!</h1>
 
 <script src="js/script.js"> </script>
 
